objects/SolPort__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Solution Portfolio</relationshipLabel>
        <relationshipName>SolPort</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CompCount__c</fullName>
        <formula>Account__r.Open_Opportunities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CompCount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CountAllCompetitors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CountAllCompetitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Former__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Former</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_By__c</fullName>
        <label>Group By</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <label>Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sold-Current</fullName>
                </value>
                <value>
                    <fullName>Sold-Former</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Not a fit</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_a_Fit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not a Fit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_value__c</fullName>
        <label>Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Closed Walked</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SolutionID__c</fullName>
        <label>SolutionID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Fit__c</fullName>
        <label>Solution Fit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undetermined</fullName>
                    <default>true</default>
                    <label>Undetermined</label>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Not a Fit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Name__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Solutions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Notes__c</fullName>
        <label>Solution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vertical</valueSetName>
        </valueSet>
    </fields>
    <label>Solution Portfolio</label>
    <nameField>
        <displayFormat>SP-{00000000}</displayFormat>
        <label>Solution Portfolio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Portfolio</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>